dynamic ip of DB container handled

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=9090
-DB_URL="host=172.17.0.3 user=postgres password=postgres dbname=gorm port=5432 sslmode=disable TimeZone=America/Bogota"
+DB_CONTAINER_IP=$(sudo docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' postgres)
+DB_URL="host=$DB_CONTAINER_IP user=postgres password=postgres dbname=gorm port=5432 sslmode=disable TimeZone=America/Bogota"
